# scratchllm

./: .gitignore  CLAUDE.md  LICENSE  README.md  architecture.ipynb  attention.ipynb  classification.ipynb  components.py  instruction-data-with-response.json  instruction.ipynb  preprocessing.ipynb  pretraining.ipynb  pyproject.toml  requirements.txt
data/: instruction-data-with-response.json
domain_specific/fine_tuning/: bert_classifier.ipynb  faiss.ipynb  fine_tuning.ipynb  gpt_text.ipynb  peft_lora.ipynb
domain_specific/fine_tuning/data/eval/: data-00000-of-00001.arrow  state.json
domain_specific/fine_tuning/data/train/: dataset_info.json  state.json
notebooks/: 01_preprocessing.ipynb  02_attention.ipynb  03_architecture.ipynb  04_pretraining.ipynb  05_classification.ipynb  06_instruction.ipynb
scratchllm/: __init__.py  data.py  generation.py  model.py  plotting.py  training.py  weights.py
