[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scratchllm"
version = "0.1.0"
description = "A GPT-style decoder-only transformer built from scratch in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Joe Wilkinson" }]
dependencies = [
    "torch",
    "tiktoken",
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["scratchllm*"]
exclude = ["env-llm*", "notebooks*", "gpt2*"]
